# WheelBipedRobot

./: .gitignore  README.md
controllers/Wheelbipedrobot_Controller/: .gitignore  CMakeLists.txt  Wheelbipedrobot_Controller.cpp  config.h
controllers/Wheelbipedrobot_Controller/MatlabFile/: Controller_para.m  fomulations.m
controllers/Wheelbipedrobot_Controller/Robot_Controller/: CMakeLists.txt  PID.cpp  PID.h  Robot_Controller.cpp  Robot_Controller.h
controllers/Wheelbipedrobot_Controller/Sim_Robot/: CMakeLists.txt  Sim_Robot.cpp  Sim_Robot.h
protos/: Wheelbipedrobot.proto
protos/meshes/: LB_crus.STL  LB_thigh.STL  LF_crus.STL  LF_thigh.STL  L_wheel.STL  RB_crus.STL  RB_thigh.STL  RF_crus.STL  RF_thigh.STL  R_wheel.STL  base.STL
worlds/: wheelbipedrobot.wbt
